<resources>
    <string name="app_name">BoatApp</string>
    <string name="config_file">configFile</string>
    <string name="StringLogin">Login</string>
    <string name="StringUsername">Username</string>
    <string name="StringPassword">Password</string>
    <string name="StringSignIn">Sign In</string>
    <string name="StringSettings">Settings</string>
    <string name="StringServerIp">Server IP</string>
    <string name="StringServerPort">Server Port</string>
    <string name="StringSave">Save</string>
    <string name="StringBoatIdNumber">Boat identification number</string>
    <string name="StringNextDestination">Next destination</string>
    <string name="StringContainerIdNumber">Container identification number</string>
    <string name="StringDestination">Destination</string>
    <string name="StringGetContainer">Get containers</string>
    <string name="StringEndContainerOut">End container out</string>
    <string name="StringBoatArrival">Boat Arrival</string>
    <string name="StringContainerArrival">Container arrival</string>
    <string name="StringEndContainerIn">End container in</string>
    <string name="StringOrderedContainers">Ordered containers</string>
    <string name="title_activity_graph">GraphActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_temp">TEMP</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StringGraph">Graphs</string>
</resources>
