<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="be.hepl.benbear.boatapp.UnloadingFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:columnCount="3"
            android:rowCount="1">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StringBoatArrival"
                android:id="@+id/buttonBoatArrival"
                android:textSize="12dp"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StringContainerArrival"
                android:id="@+id/buttonContainerArrival"
                android:textSize="12dp"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/StringEndContainerIn"
                android:id="@+id/buttonEndContainerIn"
                android:textSize="12dp"
                android:layout_columnWeight="1"
                android:layout_gravity="fill_horizontal"/>
        </GridLayout>

        <ListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/listViewUnloading"
            android:layout_gravity="center_horizontal"
            android:choiceMode="singleChoice"/>
    </LinearLayout>

</FrameLayout>
